fix ( fixed width for hero ) Fixes overlapping and UI breaking

--- a/app/components/telescope-overview/observatory-hero.scss
+++ b/app/components/telescope-overview/observatory-hero.scss
@@ -8,6 +8,7 @@
   background-size: cover;
 
   min-height: 650px;
+  min-width: 1200px;
   position: relative;
 
 
@@ -40,7 +41,7 @@
     .element {
       float: left;
       margin-right: 10px;
-      padding: 40px 0 60px 40px;
+      padding: 30px 0 0 20px;
     }
   }
 }
